# zootools

./: .gitignore  README.md  pyproject.toml  start.py
bot/: anticaptcha.py  config.py  input.py  logger.py  paths.py  proxy.py  scripts.py  utils.py
bot/zootools/: __init__.py  account.py  api.py
config/default/: config.toml
